tests/errors/fixed_form_6.f
      PROGRAM PAUSE0
      IF (.TRUE.) THEN
          PAUSE
      ENDIF
      END
